--- a/src/main/resources/jp/ikedam/jenkins/plugins/scoringloadbalancer/preferences/Messages.properties
+++ b/src/main/resources/jp/ikedam/jenkins/plugins/scoringloadbalancer/preferences/Messages.properties
@@ -19,6 +19,5 @@
 # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
-BuildResultScoringRule.DisplayName=Scoring by Build Results
-NodeLoadScoringRule.DisplayName=Scoring By Node Loads
-NodePreferenceScoringRule.DisplayName=Scoring By Node Preferences
+BuildPreferenceNodeProperty.DisplayName=Preference of Node
+BuildPreferenceJobProperty.DisplayName=Preference of Node
