Added helps for BuildPreference.

--- a/src/main/resources/jp/ikedam/jenkins/plugins/scoringloadbalancer/preferences/BuildPreference/config_ja.properties
+++ b/src/main/resources/jp/ikedam/jenkins/plugins/scoringloadbalancer/preferences/BuildPreference/config_ja.properties
@@ -19,11 +19,8 @@
 # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
-BuildPreferenceNodeProperty.DisplayName=Preference of Node
-BuildPreferenceJobProperty.DisplayName=Preference of Node
 
-BuildPreference.labelExpression.requied=Required
-BuildPreference.labelExpression.invalid=Invalid expression
-BuildPreference.labelExpression.empty=No nodes are matched
-BuildPreference.preference.requied=Required
-BuildPreference.preference.invalid=Invalid value. Only integers (includes negative number) are allowed.
+# Label\ for\ Target\ Nodes=対象ノードのラベル式
+Label\ for\ Target\ Nodes=\u5bfe\u8c61\u30ce\u30fc\u30c9\u306e\u30e9\u30d9\u30eb\u5f0f
+# Preference\ Score=スコア
+Preference\ Score=\u30b9\u30b3\u30a2
