Added helps for BuildPreferenceNodeProperty.

--- a/src/main/resources/jp/ikedam/jenkins/plugins/scoringloadbalancer/preferences/BuildPreferenceNodeProperty/config_ja.properties
+++ b/src/main/resources/jp/ikedam/jenkins/plugins/scoringloadbalancer/preferences/BuildPreferenceNodeProperty/config_ja.properties
@@ -19,14 +19,6 @@
 # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
-BuildPreferenceNodeProperty.DisplayName=Preference of Node
-BuildPreferenceNodeProperty.preference.requied=Required
-BuildPreferenceNodeProperty.preference.invalid=Invalid value. Only integers (includes negative number) are allowed.
 
-BuildPreferenceJobProperty.DisplayName=Preference of Node
-
-BuildPreference.labelExpression.requied=Required
-BuildPreference.labelExpression.invalid=Invalid expression
-BuildPreference.labelExpression.empty=No nodes are matched
-BuildPreference.preference.requied=Required
-BuildPreference.preference.invalid=Invalid value. Only integers (includes negative number) are allowed.
+# Preference\ Score=スコア
+Preference\ Score=\u30b9\u30b3\u30a2
