--- a/src/main/resources/jp/ikedam/jenkins/plugins/scoringloadbalancer/preferences/Messages_ja.properties
+++ b/src/main/resources/jp/ikedam/jenkins/plugins/scoringloadbalancer/preferences/Messages_ja.properties
@@ -22,6 +22,11 @@
 
 # BuildPreferenceNodeProperty.DisplayName=ジョブ振り分けのスコア
 BuildPreferenceNodeProperty.DisplayName=\u30b8\u30e7\u30d6\u632f\u308a\u5206\u3051\u306e\u30b9\u30b3\u30a2
+# BuildPreferenceNodeProperty.preference.requied=入力してください
+BuildPreferenceNodeProperty.preference.requied=\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
+# BuildPreferenceNodeProperty.preference.invalid=無効なスコアです。整数値(負数を含む)のみ指定可能です。
+BuildPreferenceNodeProperty.preference.invalid=\u7121\u52b9\u306a\u30b9\u30b3\u30a2\u3067\u3059\u3002\u6574\u6570\u5024(\u8ca0\u6570\u3092\u542b\u3080)\u306e\u307f\u6307\u5b9a\u53ef\u80fd\u3067\u3059\u3002
+
 # BuildPreferenceJobProperty.DisplayName=このプロジェクトのジョブ振り分けのスコア
 BuildPreferenceJobProperty.DisplayName=\u3053\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u30b8\u30e7\u30d6\u632f\u308a\u5206\u3051\u306e\u30b9\u30b3\u30a2
 
