Added helps for BuildResultScoringRule.

--- a/src/main/resources/jp/ikedam/jenkins/plugins/scoringloadbalancer/rules/BuildResultScoringRule/config_ja.properties
+++ b/src/main/resources/jp/ikedam/jenkins/plugins/scoringloadbalancer/rules/BuildResultScoringRule/config_ja.properties
@@ -20,15 +20,15 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
 
-# BuildPreferenceNodeProperty.DisplayName=ジョブ振り分けのスコア
-BuildPreferenceNodeProperty.DisplayName=\u30b8\u30e7\u30d6\u632f\u308a\u5206\u3051\u306e\u30b9\u30b3\u30a2
-
-# BuildPreferenceJobProperty.DisplayName=このプロジェクトのジョブ振り分けのスコア
-BuildPreferenceJobProperty.DisplayName=\u3053\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u30b8\u30e7\u30d6\u632f\u308a\u5206\u3051\u306e\u30b9\u30b3\u30a2
-
-# BuildPreference.labelExpression.requied=入力してください
-BuildPreference.labelExpression.requied=\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
-#BuildPreference.labelExpression.invalid=無効なラベル式です
-BuildPreference.labelExpression.invalid=\u7121\u52b9\u306a\u30e9\u30d9\u30eb\u5f0f\u3067\u3059
-# BuildPreference.labelExpression.empty=該当するノードがありません
-BuildPreference.labelExpression.empty=\u8a72\u5f53\u3059\u308b\u30ce\u30fc\u30c9\u304c\u3042\u308a\u307e\u305b\u3093
+# Number\ of\ Builds\ to\ Track=評価する最大ビルド数
+Number\ of\ Builds\ to\ Track=\u8a55\u4fa1\u3059\u308b\u6700\u5927\u30d3\u30eb\u30c9\u6570
+# Base\ Scale\ for\ Scores=スコアの基本係数
+Base\ Scale\ for\ Scores=\u30b9\u30b3\u30a2\u306e\u57fa\u672c\u4fc2\u6570
+# Scale\ Adjustment\ for\ Older\ Builds=古いビルドに対する補正係数
+Scale\ Adjustment\ for\ Older\ Builds=\u53e4\u3044\u30d3\u30eb\u30c9\u306b\u5bfe\u3059\u308b\u88dc\u6b63\u4fc2\u6570
+# Score\ for\ Success\ Build=ビルドが成功したノードのスコア
+Score\ for\ Success\ Build=\u30d3\u30eb\u30c9\u304c\u6210\u529f\u3057\u305f\u30ce\u30fc\u30c9\u306e\u30b9\u30b3\u30a2
+# Score\ for\ Unstable\ Build=ビルドが不安定なノードのスコア
+Score\ for\ Unstable\ Build=\u30d3\u30eb\u30c9\u304c\u4e0d\u5b89\u5b9a\u306a\u30ce\u30fc\u30c9\u306e\u30b9\u30b3\u30a2
+# Score\ for\ Failure\ Build=ビルドが失敗したノードのスコア
+Score\ for\ Failure\ Build=\u30d3\u30eb\u30c9\u304c\u5931\u6557\u3057\u305f\u30ce\u30fc\u30c9\u306e\u30b9\u30b3\u30a2
