--- a/src/main/resources/jp/ikedam/jenkins/plugins/scoringloadbalancer/rules/Messages.properties
+++ b/src/main/resources/jp/ikedam/jenkins/plugins/scoringloadbalancer/rules/Messages.properties
@@ -20,5 +20,8 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
 BuildResultScoringRule.DisplayName=Scoring by Build Results
-NodeLoadScoringRule.DisplayName=Scoring By Node Loads
-NodePreferenceScoringRule.DisplayName=Scoring By Node Preferences
+BuildResultScoringRule.numberOfBuilds.required=Required
+BuildResultScoringRule.numberOfBuilds.invalid=Invalid value. This must be a positive integer.
+
+NodeLoadScoringRule.DisplayName=Scoring by Node Loads
+NodePreferenceScoringRule.DisplayName=Scoring by Node Preferences
