--- a/src/main/resources/jp/ikedam/jenkins/plugins/scoringloadbalancer/util/Messages.properties
+++ b/src/main/resources/jp/ikedam/jenkins/plugins/scoringloadbalancer/util/Messages.properties
@@ -19,16 +19,6 @@
 # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
+ValidationUtil.integer.requied=Required
+ValidationUtil.integer.invalid=Invalid value. Only integers (includes negative number) are allowed.
 
-# BuildPreferenceNodeProperty.DisplayName=ジョブ振り分けのスコア
-BuildPreferenceNodeProperty.DisplayName=\u30b8\u30e7\u30d6\u632f\u308a\u5206\u3051\u306e\u30b9\u30b3\u30a2
-
-# BuildPreferenceJobProperty.DisplayName=このプロジェクトのジョブ振り分けのスコア
-BuildPreferenceJobProperty.DisplayName=\u3053\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u30b8\u30e7\u30d6\u632f\u308a\u5206\u3051\u306e\u30b9\u30b3\u30a2
-
-# BuildPreference.labelExpression.requied=入力してください
-BuildPreference.labelExpression.requied=\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
-#BuildPreference.labelExpression.invalid=無効なラベル式です
-BuildPreference.labelExpression.invalid=\u7121\u52b9\u306a\u30e9\u30d9\u30eb\u5f0f\u3067\u3059
-# BuildPreference.labelExpression.empty=該当するノードがありません
-BuildPreference.labelExpression.empty=\u8a72\u5f53\u3059\u308b\u30ce\u30fc\u30c9\u304c\u3042\u308a\u307e\u305b\u3093
