--- a/src/main/resources/jp/ikedam/jenkins/plugins/scoringloadbalancer/rules/Messages_ja.properties
+++ b/src/main/resources/jp/ikedam/jenkins/plugins/scoringloadbalancer/rules/Messages_ja.properties
@@ -20,15 +20,14 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
 
-# BuildPreferenceNodeProperty.DisplayName=ジョブ振り分けのスコア
-BuildPreferenceNodeProperty.DisplayName=\u30b8\u30e7\u30d6\u632f\u308a\u5206\u3051\u306e\u30b9\u30b3\u30a2
+# BuildResultScoringRule.DisplayName=ビルド結果による評価
+BuildResultScoringRule.DisplayName=\u30d3\u30eb\u30c9\u7d50\u679c\u306b\u3088\u308b\u8a55\u4fa1
+# BuildResultScoringRule.numberOfBuilds.required=入力してください
+BuildResultScoringRule.numberOfBuilds.required=\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
+# BuildResultScoringRule.numberOfBuilds.invalid=無効な値です。正の整数値のみ指定可能です。
+BuildResultScoringRule.numberOfBuilds.invalid=\u7121\u52b9\u306a\u5024\u3067\u3059\u3002\u6b63\u306e\u6574\u6570\u5024\u306e\u307f\u6307\u5b9a\u53ef\u80fd\u3067\u3059\u3002
 
-# BuildPreferenceJobProperty.DisplayName=このプロジェクトのジョブ振り分けのスコア
-BuildPreferenceJobProperty.DisplayName=\u3053\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u30b8\u30e7\u30d6\u632f\u308a\u5206\u3051\u306e\u30b9\u30b3\u30a2
-
-# BuildPreference.labelExpression.requied=入力してください
-BuildPreference.labelExpression.requied=\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
-#BuildPreference.labelExpression.invalid=無効なラベル式です
-BuildPreference.labelExpression.invalid=\u7121\u52b9\u306a\u30e9\u30d9\u30eb\u5f0f\u3067\u3059
-# BuildPreference.labelExpression.empty=該当するノードがありません
-BuildPreference.labelExpression.empty=\u8a72\u5f53\u3059\u308b\u30ce\u30fc\u30c9\u304c\u3042\u308a\u307e\u305b\u3093
+# NodeLoadScoringRule.DisplayName=ビルドの実行状況による評価
+NodeLoadScoringRule.DisplayName=\u30d3\u30eb\u30c9\u306e\u5b9f\u884c\u72b6\u6cc1\u306b\u3088\u308b\u8a55\u4fa1
+# NodePreferenceScoringRule.DisplayName=各ノードの優先度設定による評価
+NodePreferenceScoringRule.DisplayName=\u5404\u30ce\u30fc\u30c9\u306e\u512a\u5148\u5ea6\u8a2d\u5b9a\u306b\u3088\u308b\u8a55\u4fa1
