Make throttle time configurable (#30)

--- a/src/main/resources/jp/ikedam/jenkins/plugins/scoringloadbalancer/ScoringLoadBalancer/global_ja.properties
+++ b/src/main/resources/jp/ikedam/jenkins/plugins/scoringloadbalancer/ScoringLoadBalancer/global_ja.properties
@@ -25,6 +25,7 @@ Enable\ Scoring\ Load\ Balancer=\u6709\u52b9\u306b\u3059\u308b
 # Log\ Scores=評価結果をログに出力する
 Log\ Scores=\u8a55\u4fa1\u7d50\u679c\u3092\u30ed\u30b0\u306b\u51fa\u529b\u3059\u308b
 # Enable\ workaround\ for\ simultaneous\ builds=TODO
+# Throttle\ time\ in\ ms\ for\ simultaneous\ builds\ workaround=TODO
 # Scoring\ Rules=評価規則
 Scoring\ Rules=\u8a55\u4fa1\u898f\u5247
 # Add\ Scoring\ Rule=評価規則の追加
